--- a/src/app/components/hijo-comic/hijo-comic.component.html
+++ b/src/app/components/hijo-comic/hijo-comic.component.html
@@ -1,6 +1,7 @@
-<div style="float: left">
+<div>
   <h1>{{ comic.nombre }}</h1>
   <h2 style="color: blue">{{ comic.descripcion }}</h2>
   <img src="{{ comic.imagen }}" style="width: 100px; height: 120px" />
+  <br />
   <button (click)="marcarFavorito()">Seleccionar favorito</button>
 </div>
