--- a/src/app/components/padre-libreria/padre-libreria.component.html
+++ b/src/app/components/padre-libreria/padre-libreria.component.html
@@ -1,17 +1,29 @@
 <div>
-  <h1>Librería</h1>
-  <form #comicForm="ngForm">
-    <label>Nombre</label>
-    <input type="text" #cajanombre name="cajanombre" /><br />
-    <label>Imagen</label>
-    <input type="text" #cajaimagen name="cajaimagen" /><br />
-    <label>Descripción</label>
-    <input type="text" #cajadescripcion name="cajadescripcion" /><br />
+  <h1>Padre libreria</h1>
+  <hr />
+  <form #comicForm="ngForm" class="contenedor">
+    <label>Nombre: </label>
+    <input type="text" #cajanombre name="cajanombre" class="cajita" /><br />
+    <label>Imagen: </label>
+    <input type="text" #cajaimagen name="cajaimagen" class="cajita" /><br />
+    <label>Descripción: </label>
+    <input
+      type="text"
+      #cajadescripcion
+      name="cajadescripcion"
+      class="cajita"
+    /><br />
     <button (click)="nuevoComic()">Nuevo comic</button>
   </form>
-  <div style="background-color: yellow" *ngIf="comicFavorito">
+  <hr />
+  <div *ngIf="comicFavorito">
+    <h2 style="background-color: pink">
+      Comic favorito: {{ comicFavorito.nombre }}
+    </h2>
     <img src="{{ comicFavorito.imagen }}" style="width: 100px; height: 120px" />
+    <hr />
   </div>
+
   <div *ngFor="let comic of comics">
     <app-hijo-comic
       [comic]="comic"
