--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -6,5 +6,8 @@
     <li>
       <a [routerLink]="['/libreria']">Libreria</a>
     </li>
+    <li>
+      <a [routerLink]="['/personas']">Personas</a>
+    </li>
   </ul>
 </div>
