--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -9,5 +9,8 @@
     <li>
       <a [routerLink]="['/personas']">Personas</a>
     </li>
+    <li>
+      <a [routerLink]="['/perstandalone']">Personas standalone</a>
+    </li>
   </ul>
 </div>
