--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -1,16 +1,52 @@
-<div class="container">
-  <ul id="menu">
-    <li>
-      <a [routerLink]="['/']">Home</a>
-    </li>
-    <li>
-      <a [routerLink]="['/libreria']">Libreria</a>
-    </li>
-    <li>
-      <a [routerLink]="['/personas']">Personas</a>
-    </li>
-    <li>
-      <a [routerLink]="['/perstandalone']">Personas standalone</a>
-    </li>
-  </ul>
-</div>
+<nav
+  class="navbar navbar-expand-sm navbar-dark bg-dark"
+  aria-label="Third navbar example"
+>
+  <div class="container-fluid">
+    <img
+      src="https://cdn-icons-png.flaticon.com/512/4856/4856859.png"
+      width="90px"
+      height="90px"
+    />
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-bs-toggle="collapse"
+      data-bs-target="#navbarsExample03"
+      aria-controls="navbarsExample03"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarsExample03">
+      <ul class="navbar-nav me-auto mb-2 mb-sm-0">
+        <li class="nav-item">
+          <a class="nav-link active" [routerLink]="['/']"> Home </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="['/libreria']"> Libreria </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="['/personas']">Personas</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="['/perstandalone']"
+            >Personas standalone</a
+          >
+        </li>
+        <li class="nav-item dropdown">
+          <a
+            class="nav-link dropdown-toggle"
+            href="#"
+            data-bs-toggle="dropdown"
+            aria-expanded="false"
+          >
+            Dropdown
+          </a>
+          <ul class="dropdown-menu dropdown-menu-dark"></ul>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
