--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -35,6 +35,9 @@
             >Personas standalone</a
           >
         </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="['/coches']">Coches</a>
+        </li>
         <li class="nav-item dropdown">
           <a
             class="nav-link dropdown-toggle"
@@ -44,7 +47,7 @@
           >
             Dropdown
           </a>
-          <ul class="dropdown-menu dropdown-menu-dark"></ul>
+          <ul class="dropdown-menu"></ul>
         </li>
       </ul>
     </div>
