--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -38,6 +38,9 @@
         <li class="nav-item">
           <a class="nav-link" [routerLink]="['/coches']">Coches</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="['/plantilla']">Plantilla</a>
+        </li>
         <li class="nav-item dropdown">
           <a
             class="nav-link dropdown-toggle"
